--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<title>Minesweeper By Rafael Vasques</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="styles/buttons.css">
+		<link rel="stylesheet" href="styles/mainMenu.css">
+		<link rel="stylesheet" href="styles/gameMenu.css">
+		<link rel="stylesheet" href="styles/playfieldArea.css">
+		<link rel="stylesheet" href="styles/playfield.css">
 	</head>
 	<body>
 
